; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name NS)
 (public_name nonstdlib)
 (libraries core core_kernel.fheap zarith trace)
 (flags (:standard))
 (preprocess
  (pps ppx_sledge ppx_trace))
 (inline_tests))
