; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name NS)
 (public_name nonstdlib)
 (libraries containers containers-data core_kernel iter sexplib stdio zarith
   dbg)
 (flags
  (:standard -w -no-cmx-file))
 (preprocess
  (pps ppx_sledge ppx_dbg))
 (inline_tests))

(include_subdirs unqualified)
