; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(subdir
 dbg
 (library
  (name dbg)
  (public_name ppx_dbg.dbg)
  (libraries containers)))

(library
 (public_name ppx_dbg)
 (kind
  (ppx_rewriter
   (cookies
    (ppx_dbg_enabled %{env:PPX_DBG_ENABLED=0}))))
 (preprocess no_preprocessing)
 (libraries ppxlib))
