; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name ppx_sledge)
 (kind ppx_rewriter)
 (libraries ppx_compare ppx_expect ppx_hash ppx_here ppx_inline_test ppx_let
   ppx_sexp_conv ppx_sexp_value ppx_trace)
 (preprocess no_preprocessing))
