; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name sledge)
 (public_name sledge)
 (libraries trace import)
 (flags
  (:standard -open Import))
 (preprocess
  (pps ppx_sledge))
 (inline_tests))
