[package]
name = "charon"
version = "0.1.123"
authors = [
    "Son Ho <hosonmarc@gmail.com>",
    "Guillaume Boisseau <nadrieril+git@gmail.com>",
]
edition = "2024"
license = "Apache-2.0"

[lib]
name = "charon_lib"
path = "src/lib.rs"

[[bin]]
# The main entrypoint. This is a wrapper that handles toolchain and cargo
# management and calls `charon-driver` for the real work.
name = "charon"
path = "src/bin/charon/main.rs"

[[bin]]
# The rustc driver. The resulting binary dynamically links to rust dylibs
# including `librustc_driver.so`. Do not call directly, call charon instead to
# let it set up the right paths.
name = "charon-driver"
path = "src/bin/charon-driver/main.rs"

[[bin]]
name = "generate-ml"
path = "src/bin/generate-ml/main.rs"

[[test]]
name = "ui"
path = "tests/ui.rs"
harness = false

[[test]]
name = "cargo"
path = "tests/cargo.rs"
harness = false

[dependencies]
annotate-snippets = { git = "https://github.com/rust-lang/annotate-snippets-rs", version = "0.11.5" }
anstream = "0.6.18"
anyhow = "1.0.81"
assert_cmd = "2.0"
clap = { version = "4.0", features = ["derive", "env"] }
colored = "2.0.4"
convert_case = "0.6.0"
crates_io_api = { version = "0.11.0", optional = true }
derive_generic_visitor = "0.2.0"
either = "1.15.0"
env_logger = { version = "0.11", features = ["color"] }
flate2 = { version = "1.0.34", optional = true }
indexmap = { version = "2.7.1", features = ["serde"] }
index_vec = { version = "0.1.3", features = ["serde"] }
indoc = "2"
itertools = "0.13"
lazy_static = "1.4.0"
log = "0.4.17"
nom = "7.1.3"
nom-supreme = "0.8.0"
num-bigint = "0.4.6"
num-rational = "0.4"
petgraph = "0.6.2"
reqwest = { version = "0.12.8", optional = true }
rustc_version = "0.4"
serde_json = { version = "1.0.91", features = ["unbounded_depth"] }
serde-map-to-array = { version = "1.1.1", features = ["std"] }
serde_stacker = "0.1.11"
serde = { version = "1.0.152", features = ["derive", "rc"] }
stacker = "0.1"
strip-ansi-escapes = "0.2.1"
take_mut = "0.2.2"
tar = { version = "0.4.42", optional = true }
toml = { version = "0.8", features = ["parse"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
tracing-tree = { git = "https://github.com/Nadrieril/tracing-tree", features = [
    "time",
] } # Fork with improved formating and timing info.
tracing = { version = "0.1", features = ["max_level_trace"] }
wait-timeout = { version = "0.2.0", optional = true }
which = "7.0"

hax-frontend-exporter = { git = "https://github.com/AeneasVerif/hax", branch = "main", optional = true }
# hax-frontend-exporter = { path = "../../hax/frontend/exporter", optional = true }
macros = { path = "./macros" }

[features]
default = ["rustc"]
# This feature enables the translation of rust code into charon's format. When
# disabled, the binaries won't build but the main crate (with the ast
# definitions) still does. It is enabled by default.
rustc = ["dep:hax-frontend-exporter"]
# This feature enables the `popular-crates` test which runs Charon on the most downloaded crates from crates.io.
popular-crates-test = [
    "dep:crates_io_api",
    "dep:flate2",
    "dep:reqwest",
    "dep:tar",
    "dep:wait-timeout",
]

[dev-dependencies]
ignore = "0.4"
indoc = "2"
libtest-mimic = "0.8"
snapbox = "0.6"
tempfile = "3"
walkdir = "2.3.2"

[package.metadata.rust-analyzer]
rustc_private = true
