; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name IR)
 (public_name infer.IR)
 (flags
  (:standard
   -open
   Core
   -open
   IStdlib
   -open
   IStd
   -open
   ATDGenerated
   -open
   IBase))
 (libraries core zarith ppx_show.runtime IStdlib ATDGenerated IBase)
 (preprocess
  (pps ppx_compare ppx_hash ppx_show ppx_sexp_conv ppx_yojson_conv inferppx)))

(documentation
 (package infer)
 (mld_files IR))
