; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name absint)
 (public_name infer.absint)
 (flags
  (:standard -open Core -open InferIR -open InferStdlib -open IStd -open InferGenerated
    -open InferBase))
 (libraries core InferStdlib InferGenerated InferBase InferIR)
 (preprocess (pps ppx_compare))
)
