; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name Absint)
 (public_name infer.Absint)
 (flags
  (:standard
   -open
   Core
   -open
   IR
   -open
   IStdlib
   -open
   IStd
   -open
   ATDGenerated
   -open
   IBase))
 (libraries core ppx_show.runtime IStdlib ATDGenerated IBase IR)
 (preprocess
  (pps ppx_compare ppx_hash ppx_show ppx_yojson_conv)))

(documentation
 (package infer)
 (mld_files Absint))
