; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name InferGenerated)
 (public_name InferGenerated)
 (flags
  (:standard -w -27-32-34-35-39))
 (libraries atdgen core)
 (preprocess
  (pps ppx_compare)))

(documentation
 (package InferGenerated)
 (mld_files index))
