(library
 (name Atlas)
 (public_name infer.Atlas)
 (flags
  (:standard
   -open
   Core
   -open
   OpenSource
   -open
   IR
   -open
   IStdlib
   -open
   IStd
   -open
   ATDGenerated
   -open
   IBase
   -open
   Absint
   -open
   BO
   -open
   Pulselib
   -open
   Ppx_yojson_conv_lib.Yojson_conv.Primitives))
 (libraries
  base64
  core
  ocamlgraph
  IStdlib
  ATDGenerated
  IBase
  IR
  Absint
  BO
  Pulselib)
 (preprocess
  (pps
   ppx_compare
   ppx_hash
   ppx_fields_conv
   ppx_sexp_conv
   ppx_variants_conv
   ppx_yojson_conv)))


